changed env variables

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+DB='mongodb+srv://Raj:Raj18110@cluster0.y9rbp48.mongodb.net/userDB?retryWrites=true&w=majority'
 CLIENT_ID="1010808642045-2ipe5qqe3dtlhncfeved4ijfi2kjv7mq.apps.googleusercontent.com"
 CLIENT_SECRET="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"
+MAIL_USER='rajbhattacharyya8110@outlook.com'
+MAIL_PASS='Raj18110'
