--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB='mongodb+srv://Raj:Raj18110@cluster0.y9rbp48.mongodb.net/userDB?retryWrites=true&w=majority'
 CLIENT_ID="302286254180-bpe8m7pe8lrca49p9u53f976p1mgb98t.apps.googleusercontent.com"
 CLIENT_SECRET="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"
-MAIL_USER='rajbhattacharyya8110@outlook.com'
-MAIL_PASS='Raj18110'
+MAIL_USER='rajbhattacharyya18110@outlook.com'
+MAIL_PASS='Raj@18110'
