--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node App.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
